--- a/js/css/style.css
+++ b/js/css/style.css
@@ -12,6 +12,11 @@ body{
 
 }
 
+#picture img{
+    width: 15%;
+    margin: 10px 0px;
+}
+
 .container , .containerticket{
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -48,7 +53,7 @@ body{
    margin-right: 15px;
    cursor: pointer;
    background-color: white;
-   transition: ease-in-out 1s;
+   transition: ease-in-out 0.5s;
    font-weight: bold;
 
 }
@@ -60,6 +65,7 @@ body{
     transform: scale(1.2);
     
 }
+
 #reset:hover {
     color:yellowgreen;
     background-color: red;
